# properties

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
src/: main.cc  properties.hh  utils.hh
